# omicagent

./: .env.example  .gitignore  CLAUDE.md  README.md  doc.txt  pyproject.toml
data/annotation/: baseline.md  corpus.csv  mapping_table.v1.json  mapping_table.v2.json  mapping_table.v3.json  mapping_table.v4.json  p1_harvest_report.md  p2_mapping_report.md  scplantdb_ref.json
omicagent/: __init__.py  agent.py  cli.py  code_generator.py  config.py  config_manager.py  cross_species.py  data_searcher.py  db_catalog.py  env_builder.py  env_recipes.py  llm_client.py  local_datasets.py  metadata_parser.py  ncbi_client.py  ontology.py  pipeline.py  report_generator.py  task_planner.py  tool_dispatcher.py  tools.py
omicagent/annotation/: __init__.py  annotation_harvester.py  mapping_store.py  pdf_extractor.py  ref_ontology.py  schemas.py  zotero_source.py
omicagent/data/: db_catalog.json
omicagent/templates/: report.html.j2
skills/plant_annotation/: SKILL.md  demo_unify.py  unify_h5ad.py
tests/: bench_esm.py  debug_paper.py  extract_proteome.py  inspect_subset.R  smoke_test.py  test_cli_agent.py  test_data_searcher.py  test_e2e.py  test_env_builder.py  test_env_builder_spec.py  test_lang.py  test_metadata_parser.py
